# fast_dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THEME_UPDATE.md  pyproject.toml
src/: __init__.py  embed_signing.py  taxonomy.py
src/core/: __init__.py  _optional_import.py  audit.py  auth.py  config_reload.py  database.py  embed_revocation.py  embed_signing.py  embed_theme.py  encryption.py  graphql_generator.py  health.py  layout.py  metrics.py  nplus1_detector.py  rate_limit.py  registry.py  router.py  saga.py  seo.py  smart_cache.py  time_travel.py  tracing.py  webhooks.py
src/fastmvc_dashboards/: __init__.py
src/fastmvc_dashboards/secrets_dashboard/: router.py
src/fastmvc_dashboards/workflows_dashboard/: router.py
src/integrations/providers/: __init__.py  grafana.py  looker.py  metabase.py  powerbi.py
src/operations/api_dashboard/: __init__.py  registry.py  router.py
src/operations/health/: __init__.py  dashboard.py
src/operations/queues_dashboard/: __init__.py  router.py
src/operations/secrets_dashboard/: __init__.py  router.py
tests/: test_config_reload.py  test_embed_revocation_theme.py  test_embed_signing.py  test_encryption.py  test_graphql_generator.py  test_loose_coupling.py  test_mocks.py  test_nplus1_detector.py  test_providers.py  test_public_api.py  test_registry.py  test_router.py  test_saga.py  test_seo.py  test_smart_cache.py  test_time_travel.py  test_tracing.py
tests/e2e/: test_dashboard_e2e.py
tests/integration/: test_dashboard_integration.py  test_registry_integration.py
tests/mocks/: start_utils.py
(+20 files in other folders)
