[project]
name = "fastmvc_dashboards"
version = "0.1.0"
description = "Dashboards extension for FastMVC (health, API, queues, tenants, secrets, workflows)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/fastmvc_dashboards"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

